DanaR driver as a service